# crud-path

./: .gitignore  Cargo.toml  README.md  package.json  readme.md
.github/workflows/: release.yml  test.yml
src/: common.rs  github.rs  lib.rs  main.rs  unix.rs  windows.rs
ts/: cli.ts  github.ts  index.ts  is-admin.ts  tool.ts
