[package]
name = "crud-path"
version = "0.1.3"
edition = "2021"
resolver = "2"
license = "MIT"
description = "crud-path"
repository = "https://github.com/ahaoboy/crud-path"
homepage = "https://github.com/ahaoboy/crud-path"
authors = ["ahaoboy"]


[dependencies]
is-admin = "^0.1"
which-shell = "^0.1"
