[package]
name = "crud-path"
version = "0.1.5"
edition = "2021"
resolver = "2"
license = "MIT"
description = "crud-path"
repository = "https://github.com/ahaoboy/crud-path"
homepage = "https://github.com/ahaoboy/crud-path"
authors = ["ahaoboy"]


[dependencies]
is-admin = { version = "0.1", git = "https://github.com/ahaoboy/is-admin.git" }
which-shell = { version = "0.1", git = "https://github.com/ahaoboy/which-shell.git" }
