[package]
name = "crud-path"
version = "0.1.9"
edition = "2024"
resolver = "2"
license = "MIT"
description = "crud-path"
repository = "https://github.com/ahaoboy/crud-path"
homepage = "https://github.com/ahaoboy/crud-path"
authors = ["ahaoboy"]
include = ["/src", "/Cargo.toml", "/README.md"]

[dependencies]
is-admin = { version = "0.1", git = "https://github.com/ahaoboy/is-admin.git" }
which-shell = { version = "0.1", git = "https://github.com/ahaoboy/which-shell.git" }
shellexpand = "3"
path-clean = "1"

[profile.release]
debug = false
lto = true
strip = true
opt-level = 3
codegen-units = 1

[profile.bloaty]
debug = true
lto = false
strip = false
inherits = 'release'
